add postgres service to test job

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,8 +3,11 @@ name: Java CI with Maven
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
+env:
+  DB_HOST: localhost
+  DB_USERNAME: postgres
+  DB_PASSWORD: postgres
     
 jobs:
   compile:
@@ -23,6 +26,20 @@ jobs:
     runs-on: ubuntu-latest
     name: Running tests
     needs: compile
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: clarify        
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
