--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
-    name: Running tests
+    name: Running tests and generate coverage report
     needs: compile
     services:
       postgres:
@@ -48,18 +48,8 @@ jobs:
           java-version: 1.11
       - name: Run unit tests
         run: mvn test
-  coverage:
-    runs-on: ubuntu-latest
-    name: Generate coverage report
-    needs: test
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
       - name: generate report codecov
-        run: mvn test jacoco:report
+        run: mvn jacoco:report
       - name: Upload coverage
         if: success()
         run: |
