--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Test and Coverage report
 
 on:
   push:
@@ -10,18 +10,6 @@ env:
   DB_PASSWORD: mechanics
     
 jobs:
-  compile:
-    runs-on: ubuntu-latest
-    name: Running Java ${{ matrix.java }} compile
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.11
-    - name: Compile code
-      run: mvn compile
-  
   test:
     runs-on: ubuntu-latest
     name: Running tests and generate coverage report
