--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # Database configuration
-spring.datasource.url= jdbc:postgresql://localhost:5432/clarify
-spring.datasource.username= sats
-spring.datasource.password= mechanics
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=clarify
