--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,17 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Running tests and generate coverage report
     services:
-      postgres:
+      mongo:
         image: mongo:latest
         env:
           MONGO_INITDB_DATABASE: ${APP_MONGO_DB}
         ports:
           - 27017:27017
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
