connect to mongodb atlas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 # Database configuration
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://mongo:mongo@mongo-cluster.ashj2.mongodb.net/clarify?retryWrites=true&w=majority
 spring.data.mongodb.database=clarify
 spring.data.mongodb.auto-index-creation=true
