--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: clarify-backend
@@ -6,29 +6,29 @@ spec:
   selector:
     matchLabels:
       app: clarify-backend
-    replicas: 3
-    template:
-      metadata:
-        labels:
-          app: clarify-backend
-        spec:
-          containers:
-            - name: clarify-backend
-              image: gcr.io/clarify-332505/clarify
-              imagePullPolicy: IfNotPresent
-              ports:
-               - containerPort: 8080
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: clarify-backend
+    spec:
+      containers:
+        - name: clarify-backend
+          image: gcr.io/clarify-332505/clarify
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8080
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   name: clarify-backend-service
-  spec:
-    selector:
-      app: clarify-backend
-    ports:
-      - protocol: "TCP"
-        port: 8080
-        targetPort: 8080
-    type: LoadBalancer
+spec:
+  selector:
+    app: clarify-backend
+  ports:
+    - protocol: "TCP"
+      port: 8080
+      targetPort: 8080
+  type: LoadBalancer
 
