--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -19,7 +19,7 @@ spec:
           ports:
             - containerPort: 8080
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: clarify-backend-service
