--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -56,9 +56,7 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |-
-        docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:latest"
-          .
+        docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:latest" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
