--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -75,6 +75,6 @@ jobs:
       run: |-
         # replacing the image name in the k8s template
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-        ./kustomize build ./kube | kubectl apply -f -
+        ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
