--- a/deployment.yml
+++ b/deployment.yml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: clarify-backend
           image: gcr.io/clarify-332505/clarify
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
 ---
